--- a/Restorante/Views/Shared/_Layout.cshtml
+++ b/Restorante/Views/Shared/_Layout.cshtml
@@ -17,34 +17,51 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Restorante</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                </ul>
-                @await Html.PartialAsync("_LoginPartial")
-            </div>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" asp-action="Index" asp-controller="Home">Tasty</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item"><a class="nav-link" href="#">Order History</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Admin
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Category Type</a>
+                        <a class="dropdown-item" href="#">Sub Category</a>
+                        <a class="dropdown-item" href="#">Menu Items</a>
+                        <a class="dropdown-item" href="#">Coupons</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Order
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Manage Order</a>
+                        <a class="dropdown-item" href="#">Order Pickup</a>
+                        <a class="dropdown-item" href="#">Download Order Details</a>
+                    </div>
+                </li>
+            </ul>
         </div>
+        <div class="form-inline">
+            @await Html.PartialAsync("_LoginPartial")
+        </div>
+
     </nav>
     <div class="container body-content">
+        <br />
         @RenderBody()
+        <br />
         <hr />
-        <footer>
-            <p>&copy; 2018 - Restorante</p>
-        </footer>
+
     </div>
+    <footer class="footer">
+        <div class="cont">
+            <p class="text-muted">&copy; 2018 - TastyProject</p>
+        </div>
+    </footer>
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
