--- a/Restorante/wwwroot/css/site.css
+++ b/Restorante/wwwroot/css/site.css
@@ -42,7 +42,7 @@
     background-color: #343A40;
 }
 
-    .footer > .cont {
+.footer > .cont {
         padding-left: 15px;
         padding-right: 15px;
     }
@@ -50,4 +50,23 @@
 html {
     position: relative;
     min-height: 100%;
+}
+
+.form-border {
+    border: 1px solid #bbb9b9;
+    border-radius: 5px;
+    padding-top:30px;
+    padding-bottom:10px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.custom-label {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.4285;
+    color:#555;
 }
