--- a/Restorante/Views/Categories/Index.cshtml
+++ b/Restorante/Views/Categories/Index.cshtml
@@ -12,7 +12,7 @@
 <div class="form-border">
     <table class="table">
         <thead>
-            <tr>
+            <tr class="table-primary">
                 <th>
                     @Html.DisplayNameFor(model => model.Name)
                 </th>
