--- a/Restorante/Views/MenuItem/Index.cshtml
+++ b/Restorante/Views/MenuItem/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<Restorante.Models.SubCategory>
+﻿@model IEnumerable<Restorante.Models.MenuItem>
 @{
     ViewData["Title"] = "Index";
 }
 <br />
 
-<h2>Sub Category List</h2>
+<h2>Menu Items List</h2>
 <br />
 @Html.Partial("_CreateButtonPartial")
 <div class="form-border">
@@ -14,19 +14,31 @@
                 @Html.DisplayNameFor(m => m.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(m => m.Category.Name)
+                @Html.DisplayNameFor(m => m.Price)
+            </th>
+            <th>
+                @Html.DisplayNameFor(m => m.CategoryId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(m => m.SubCategoryId)
             </th>
             <th></th>
             <th></th>
         </tr>
-        @foreach(var item in Model)
+        @foreach (var item in Model)
         {
         <tr>
             <td>
                 @Html.DisplayFor(m => item.Name)
             </td>
             <td>
+                @Html.DisplayFor(m => item.Price)
+            </td>
+            <td>
                 @Html.DisplayFor(m => item.Category.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(m => item.SubCategory.Name)
             </td>
             <td>
                 @Html.Partial("_TableButtonPartial", item.Id)
@@ -36,6 +48,7 @@
         }
     </table>
 </div>
+
 
 
 
