--- a/Restorante/wwwroot/css/site.css
+++ b/Restorante/wwwroot/css/site.css
@@ -39,7 +39,7 @@
     bottom: 0;
     width: 100%;
     height: 60px;
-    background-color: #343A40;
+    background-color: #999;
 }
 
 .footer > .cont {
