--- a/Restorante/Views/Shared/_Layout.cshtml
+++ b/Restorante/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" asp-action="Index" asp-controller="Home">Tasty</a>
+        <a class="navbar-brand" asp-action="Index" asp-controller="Home">Restorante</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="#">Order History</a></li>
@@ -32,7 +32,7 @@
                         <a class="dropdown-item" asp-controller="Categories" asp-action="Index">Category</a>
                         <a class="dropdown-item" asp-controller="SubCategory" asp-action="Index">Sub Category</a>
                         <a class="dropdown-item"  asp-controller="MenuItem" asp-action="Index">Menu Items</a>
-                        <a class="dropdown-item" href="#">Coupons</a>
+                        <a class="dropdown-item" asp-controller="Coupons" asp-action="Index">Coupons</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -67,7 +67,7 @@
     </div>
     <footer class="footer">
         <div class="cont">
-            <p class="text-muted">&copy; 2018 - TastyProject</p>
+            <p class="text-muted">&copy; 2018 - Restorante</p>
         </div>
     </footer>
 
