--- a/Restorante/Views/Shared/_ThumbnailAreaPartial.cshtml
+++ b/Restorante/Views/Shared/_ThumbnailAreaPartial.cshtml
@@ -29,11 +29,13 @@
                         </div>
                     </div>
                     <div class="row col-12 text-justify">
-                        <p>@item.Description
-                        &nbsp;
-                        </p>
-                        <br />                        
-                        <a asp-action="Details" class="btn btn-success" asp-route-id="@item.Id">Details</a>
+                        <p>@item.Description</p>
+                        <br />                                               
+                    </div>
+                    <div class="row">                       
+                        <div class="col-2">
+                            <a asp-action="Details" class="btn btn-success" asp-route-id="@item.Id">Details</a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-3">
