--- a/Restorante/Views/Shared/_Layout.cshtml
+++ b/Restorante/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-spacelab.css" />
         <link rel="stylesheet" href="~/css/site.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+        <link rel="stylesheet" href="~/css/jquery-ui.min.css" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -16,6 +17,7 @@
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+        <link rel="stylesheet" href="~/css/jquery-ui.min.css" />
     </environment>
 </head>
 <body>
@@ -31,8 +33,9 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" asp-controller="Categories" asp-action="Index">Category</a>
                         <a class="dropdown-item" asp-controller="SubCategory" asp-action="Index">Sub Category</a>
-                        <a class="dropdown-item"  asp-controller="MenuItem" asp-action="Index">Menu Items</a>
+                        <a class="dropdown-item" asp-controller="MenuItem" asp-action="Index">Menu Items</a>
                         <a class="dropdown-item" asp-controller="Coupons" asp-action="Index">Coupons</a>
+                        <a class="dropdown-item" asp-controller="Users" asp-action="Index">Users</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -75,6 +78,7 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/js/jquery-ui.min.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
@@ -90,6 +94,7 @@
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
+        <script src="~/js/jquery-ui.min.js" asp-append-version="true"></script>
     </environment>
 
     @RenderSection("Scripts", required: false)
