Finish Shopping Cart

--- a/Restorante/Views/Cart/Index.cshtml
+++ b/Restorante/Views/Cart/Index.cshtml
@@ -25,34 +25,82 @@
                     </tr>
                     @foreach (var item in Model.listCart)
                     {
-                    <tr style="padding:50px;">
-                        <td>
-                            <b>
-                                @Html.DisplayFor(c => item.MenuItem.Name)
-                            </b>
-                            <br />
-                            @Html.DisplayFor(c => item.MenuItem.Description)
-                        </td>
-                        <td style="width:70px; text-align:center">
-                            @Html.DisplayFor(c => item.MenuItem.Price)
-                        </td>
-                        <td style="width:70px; text-align:center">
-                            @Html.DisplayFor(c => item.Count)
-                        </td>
-                        <td>
-                            <button type="submit" class="btn btn-primary" asp-action="plus" asp-route-cartid="@item.Id">
-                                <i class="fas fa-plus"></i>
-                            </button>
-                            <button type="submit" class="btn btn-danger" asp-action="minus" asp-route-cartid="@item.Id">
-                                <i class="fas fa-minus"></i>
-                            </button>
-                        </td>
-                    </tr>
+                        <tr style="padding:50px;">
+                            <td>
+                                <b>
+                                    @Html.DisplayFor(c => item.MenuItem.Name)
+                                </b>
+                                <br />
+                                @Html.DisplayFor(c => item.MenuItem.Description)
+                            </td>
+                            <td style="width:70px; text-align:center">
+                                @Html.DisplayFor(c => item.MenuItem.Price)
+                            </td>
+                            <td style="width:70px; text-align:center">
+                                @Html.DisplayFor(c => item.Count)
+                            </td>
+                            <td>
+                                <button type="submit" class="btn btn-primary" asp-action="plus" asp-route-cartid="@item.Id">
+                                    <i class="fas fa-plus"></i>
+                                </button>
+                                <button type="submit" class="btn btn-danger" asp-action="minus" asp-route-cartid="@item.Id">
+                                    <i class="fas fa-minus"></i>
+                                </button>
+                            </td>
+                        </tr>
                     }
                 </table>
             </div>
+            <hr />
             <div class="container">
+                <div class="row">
+                    <div class="col-2">
+                        <label class="custom-label">Coupon Code: </label>
+                    </div>
+                    <div class="col-2">
+                        <input asp-for="@Model.OrderHeader.CouponCode" id="txtCouponCode" class="form-control" />
+                    </div>
+                    <div class="col-2">
+                        <input type="button" value="Apply" id="btnCoupon" class="btn btn-sm btn-success" />
+                        <a asp-action="Index" asp-controller="Cart" id="btnRemoveCoupon" style="display:none;" class="btn btn-sm btn-success">Remove</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-2">
+                        <label class="custom-label">Order Total: </label>
+                    </div>
+                    <div class="col-3">
+                        <input asp-for="@Model.OrderHeader.OrderTotal" id="txtOrderTotal" readonly class="form-control" />
+                    </div>
+                    <div class="col-2">
 
+                    </div>
+                    <div class="col-2">
+                        <label class="custom-label">PickUp Time: </label>
+                    </div>
+                    <div class="col-3">
+                        <input asp-for="@Model.OrderHeader.PickUpTime" id="timepicker" value="" type="text" class="form-control" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-2">
+                        <label class="custom-label">Comments: </label>
+                    </div>
+                    <div class="col-10">
+                        <textarea asp-for="@Model.OrderHeader.Comments" style="height: 100px;" class="form-control"></textarea>
+                    </div>                   
+                </div>
+                <div class="row" style="padding-top:5px;">
+                    <div class="col-2">
+
+                    </div>
+                    <div class="col-5">
+                        <label class="text-danger" id="lblShopClosed" style="display:none;">We are closed for the evening.</label>
+                    </div>
+                    <div class="col-5 text-right">
+                        <button type="submit" id="btnPlaceOrder" onclick="return validateInput()" value="Place Order" class="btn btn-success">Place Order</button>
+                    </div>
+                </div>
             </div>
         </div>
     }
@@ -63,3 +111,87 @@
     }
 
 </form>
+
+@section Scripts {
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.js"></script>
+
+    <script>
+
+        function validateInput() {
+            var time = document.getElementById("timepicker").value;
+            if (time.toString() == '') {
+                alert("Please select pickup time");
+                return false;
+
+            }
+            else {
+                return true;
+
+            }
+
+        }
+
+
+        $(document).ready(function () {
+            var curDt = new Date();
+            //12pm-10pm
+            var minTime = "";
+            if (curDt.getHours() < 11) {
+                minTime = '12:00pm';
+            }
+            else {
+                if (curDt.getMinutes() < 30) {
+                    minTime = (curDt.getHours() + 1).toString() + ':30pm'
+                }
+                else {
+                    minTime = (curDt.getHours() + 2).toString() + ':00pm'
+                }
+            }
+
+            if (curDt.getHours() > 20) {
+                //No More orders
+                $('timepicker').prop('disabled', true);
+                $('btnPlaceOrder').prop('disabled', true);
+                $('lblShopClosed').show();
+            }
+
+            $('#timepicker').timepicker({
+                'minTime': minTime,
+                'maxTime': '20:00pm'
+            });
+
+        });
+
+        $('#btnCoupon').click(function () {
+            var CouponCode = document.getElementById("txtCouponCode").value;
+            var OrderTotal = document.getElementById("txtOrderTotal").value;
+
+            $.ajax({
+                url: '/API/CouponApi?OrderTotal=' + OrderTotal + '&CouponCode=' + CouponCode,
+                type: 'GET',
+                dataType: 'text',
+                success: function (data, textStatus, xhr) {
+                    var splitData = data.split(":");
+
+                    if (splitData[1] == 'E') {
+                        //Error
+                        alert("Coupons is either invalid or does not meet the criteria");
+                    }
+                    else {
+                        //Success
+                        $('#txtOrderTotal').attr('value', Math.round(splitData[0] * 100) / 100);
+                        document.getElementById('txtCouponCode').readOnly = true;
+                        document.getElementById('btnCoupon').style.display = 'none';
+                        document.getElementById('btnRemoveCoupon').style.display = '';
+
+                    }
+
+                }
+
+            })
+
+        });
+
+    </script>
+}
