--- a/Restorante/Views/Home/About.cshtml
+++ b/Restorante/Views/Home/About.cshtml
@@ -1,7 +1,37 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+<h1>Library management dashboard</h1>
 
-<p>Use this area to provide additional information.</p>
+<div class="row">
+    <div class="col-md-6">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                Customers Count
+            </div>
+            <div class="panel-body">
+                
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                Authors Count
+            </div>
+            <div class="panel-body">
+               
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                Books count
+            </div>
+            <div class="panel-body">
+              
+            </div>
+        </div>
+    </div>
+</div>
