--- a/Restorante/Views/Order/OrderHistory.cshtml
+++ b/Restorante/Views/Order/OrderHistory.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Restorante.Models.OrderDetailsViewModels.OrderDetailViewModel>
+﻿@model Restorante.Models.OrderDetailsViewModels.OrderListViewModel
 @{
     ViewData["Title"] = "OrderHistory";
 }
@@ -7,9 +7,9 @@
 
 <br />
 
-@if (Model.Count > 0)
+@if (Model.Orders.Count > 0)
 {
-    @foreach (var item in Model)
+    @foreach (var item in Model.Orders)
     {
         @Html.Partial("_IndividualOrderDetails", item);
     }
@@ -19,4 +19,8 @@ else
 {
     <p>No Past Orders Available</p>
 }
+<br />
+<div page-model="@Model.PagingInfo" page-action="OrderHistory" page-classes-enabled="true"
+     page-class="btn border" page-class-normal="btn btn-default active" 
+     page-class-selected="btn btn-primary active" class="btn-group m-1"></div>
 <br />
