--- a/Restorante/Views/_ViewImports.cshtml
+++ b/Restorante/Views/_ViewImports.cshtml
@@ -4,3 +4,4 @@
 @using Restorante.Models.AccountViewModels
 @using Restorante.Models.ManageViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper Restorante.TagHelpers.*,Restorante
