Added View Component

--- a/Restorante/Views/Shared/_LoginPartial.cshtml
+++ b/Restorante/Views/Shared/_LoginPartial.cshtml
@@ -8,8 +8,8 @@
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
-            <li class="nav-item">
-                <a asp-area="" asp-controller="Manage" asp-action="Index" class="nav-link" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+            <li class="nav-item" style="padding-right:20px;">
+                <a asp-area="" asp-controller="Manage" asp-action="Index" class="nav-link" title="Manage">@await Component.InvokeAsync("UserName")</a>
             </li>
             <li class="nav-item">
                 <button type="submit" class="btn btn-link navbar-btn nav-link">Log out</button>
